fix: sonarqube 지적 부분 일부 수정